# argusx-b

./: .gitignore  .pre-commit-config.yaml.bak  Cargo.toml  deny.toml  prek.toml
.claude/: settings.json
agent-core/: Cargo.toml
agent-core/src/: error.rs  events.rs  lib.rs  model.rs  runtime_event.rs  traits.rs  transcript_item.rs
agent-turn/: Cargo.toml
agent-turn-cli/: Cargo.toml
agent-turn-cli/src/: main.rs
agent-turn/src/: effect.rs  engine.rs  journal.rs  lib.rs  projection.rs  reducer.rs  runtime_impl.rs  state.rs  test_helpers.rs  transition.rs
agent-turn/src/adapters/: bigmodel.rs  mod.rs
argusx-common/: Cargo.toml
argusx-common/src/: lib.rs
argusx-common/src/config/: mod.rs  settings.rs
argusx-common/src/logging/: init.rs  mod.rs
argusx-common/tests/: config_test.rs
argusx-desktop/: .gitignore  CLAUDE.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
argusx-desktop/.claude/skills/: logo-creator
argusx-desktop/.next/dev/: build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  trace
argusx-desktop/.next/dev/cache/: .rscinfo
argusx-desktop/.next/dev/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
argusx-desktop/.next/dev/server/app/: page.js  page_client-reference-manifest.js
argusx-desktop/.next/dev/static/chunks/: 2c99e_@radix-ui_react-select_dist_index_mjs_785da972._.js  2c99e_@radix-ui_react-select_dist_index_mjs_785da972._.js.map  35b79_tailwind-merge_dist_bundle-mjs_mjs_8fe727c0._.js.map  3c6f9_@base-ui_react_esm_97426b48._.js  3c6f9_@base-ui_react_esm_97426b48._.js.map  3c6f9_@base-ui_react_esm_combobox_ce07f294._.js  3c6f9_@base-ui_react_esm_combobox_ce07f294._.js.map  3c6f9_@base-ui_react_esm_floating-ui-react_32e55fe1._.js  3c6f9_@base-ui_react_esm_floating-ui-react_32e55fe1._.js.map  3c6f9_@base-ui_react_esm_utils_275f3497._.js  3c6f9_@base-ui_react_esm_utils_275f3497._.js.map  5e54f_react-dom_4d21b075._.js.map  69652_@swc_helpers_cjs_679851cc._.js.map  [next]_internal_font_google_nunito_sans_8ed89ec8_module_css_bad6b30c._.single.css  [next]_internal_font_google_nunito_sans_8ed89ec8_module_css_bad6b30c._.single.css.map  [root-of-the-server]__092393de._.js  [root-of-the-server]__434930bd._.css  [root-of-the-server]__434930bd._.css.map  [root-of-the-server]__45f039c3._.js  _22e425a2._.js  _22e425a2._.js.map  app_globals_css_bad6b30c._.single.css  app_globals_css_bad6b30c._.single.css.map  app_layout_tsx_643a1099._.js  app_page_tsx_ae2e69e9._.js  b2b3e_next_app_4cdbafa6.js.map  b2b3e_next_dist_0343e802._.js.map  b2b3e_next_dist_054b9fee._.js.map  b2b3e_next_dist_524bbb02._.js.map  b2b3e_next_dist_77a734fe._.js.map  b2b3e_next_dist_client_121ab40e._.js.map  b2b3e_next_dist_client_3155e477._.js  b2b3e_next_dist_client_3155e477._.js.map  b2b3e_next_dist_compiled_a8f11176._.js.map  b2b3e_next_dist_compiled_d4dfd0b7._.js  b2b3e_next_dist_compiled_d4dfd0b7._.js.map  b2b3e_next_dist_compiled_next-devtools_index_439c3795.js  b2b3e_next_dist_compiled_react-dom_d19f9ff6._.js.map  b2b3e_next_dist_compiled_react-server-dom-turbopack_1182ddf0._.js.map  (+13 more)
argusx-desktop/.skill-archive/logo-creator/2026-02-20-argus/: preview.html
argusx-desktop/app/: globals.css  layout.tsx  page.tsx
argusx-desktop/app/chat/: page.tsx
argusx-desktop/app/prompt-lab/: layout.tsx  page.tsx
argusx-desktop/app/prompt-lab/checklist/: page.tsx
argusx-desktop/app/prompt-lab/golden-sets/: page.tsx
argusx-desktop/app/prompt-lab/logs/: page.tsx
argusx-desktop/app/prompt-lab/results/: page.tsx
argusx-desktop/components/: app-layout.tsx  sidebar-toggle.tsx  sidebar-trigger.tsx
argusx-desktop/components/features/: index.ts
argusx-desktop/components/layouts/: app-layout.tsx  index.ts  theme-toggle.tsx
argusx-desktop/components/layouts/sidebar/: app-sidebar.tsx  chat-sidebar.tsx  index.ts  sidebar-toggle.tsx
argusx-desktop/components/ui/: sidebar.tsx
argusx-desktop/hooks/: index.ts  use-theme.ts
argusx-desktop/lib/api/: index.ts  prompt-lab.ts
argusx-desktop/lib/mocks/: data.ts  prompt-lab-mock.ts
argusx-desktop/src-tauri/: Cargo.toml  tauri.conf.json
argusx-desktop/src-tauri/src/: lib.rs  main.rs
argusx-desktop/types/: index.ts
bigmodel-api/: Cargo.toml
bigmodel-api/src/: client.rs  config.rs  error.rs  lib.rs  models.rs
bigmodel-api/tests/: client.rs  config.rs  models.rs
cli-llm/: Cargo.toml
cli-llm/src/: config.rs  lib.rs  main.rs  output.rs  repl.rs
cli-llm/src/providers/: anthropic.rs  bigmodel.rs  mod.rs  openai.rs
config/: default.toml
docs/plans/: 2026-02-17-llm-sdk-design.md
git-vcs/: Cargo.toml
git-vcs/src/: lib.rs  types.rs
git-vcs/src/config/: mod.rs  user_config.rs
git-vcs/src/impl/: git2.rs  gitolite_client.rs  mod.rs
git-vcs/src/impl_/: mod.rs
git-vcs/src/namespace/: mod.rs  store.rs
git-vcs/src/traits/: mod.rs  rbac.rs  vcs.rs
git-vcs/tests/: git2_vcs_test.rs  git_config_test.rs  gitolite_client_test.rs  namespace_store_test.rs  rbac_trait_test.rs  types_test.rs  vcs_trait_test.rs
llm-cli/: Cargo.toml
llm-cli/src/: cli.rs  main.rs  output.rs  repl.rs
llm-cli/src/providers/: anthropic.rs  bigmodel.rs  mod.rs  openai.rs
llm-cli/tests/: cli_test.rs  proptest_test.rs
llm-sdk/: Cargo.toml
llm-sdk/src/: domain.rs  error.rs  lib.rs  session.rs  traits.rs
llm-sdk/src/providers/bigmodel/: client.rs  mod.rs
llm-sdk/src/tools/: context.rs  error.rs  handler.rs  mod.rs  orchestrator.rs  registry.rs
llm-sdk/src/tools/handlers/: apply_patch.rs  mod.rs  read_file.rs
llm-sdk/tests/: domain.rs
prompt_lab/: dev.db
prompt_lab_cli/: Cargo.toml
prompt_lab_cli/src/: main.rs
prompt_lab_core/: .env.example  Cargo.toml
prompt_lab_core/migrations/: 202602150001_init_prompt_lab_sqlite.down.sql  202602150001_init_prompt_lab_sqlite.up.sql
prompt_lab_core/src/: domain.rs  error.rs  lib.rs  repository.rs  service.rs  sqlite.rs
prompt_lab_core/tests/: core_flow.rs
tauri-app/: .gitignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json
tauri-app/src/: lib.rs
(+49 files in other folders)
