[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"
description = "Agent runtime protocol and domain definitions"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
