[package]
name = "agent-turn-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Manual test CLI for agent-turn runtime"

[dependencies]
agent-core = { path = "../agent-core" }
agent-turn = { path = "../agent-turn" }
bigmodel-api = { path = "../bigmodel-api" }
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
