[package]
name = "argusx-common"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
