[package]
name = "argusx-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
