[package]
name = "bigmodel-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
wiremock = "0.6"
