[package]
name = "bigmodel-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
reqwest.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
async-stream.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6"
