[package]
name = "cli-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
llm-sdk = { path = "../llm-sdk" }
anyhow = "1"
env_logger = "0.11"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"

[dev-dependencies]
proptest = "1.5"
