[package]
name = "git-vcs"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.18"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
