[package]
name = "llm-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap.workspace = true
tokio.workspace = true
llm-sdk = { path = "../llm-sdk" }
anyhow.workspace = true
env_logger = "0.11"
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
async-stream.workspace = true

[dev-dependencies]
proptest = "1.5"
