[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait.workspace = true
bigmodel-api = { path = "../bigmodel-api" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3"
