[package]
name = "prompt_lab_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "prompt-lab"
path = "src/main.rs"

[dependencies]
argusx-common = { path = "../argusx-common" }
clap.workspace = true
comfy-table.workspace = true
serde_json.workspace = true
tokio.workspace = true
prompt_lab_core = { path = "../prompt_lab_core" }
