[package]
name = "prompt_lab_core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
argusx-common = { path = "../argusx-common" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
